Add Spring Cloud Gateway to proxy to both the angular app and the spring boot application.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
-    <button (click)="greet()">Call SpringBoot Backend</button>
+    <button (click)="greet()">Call SpringBoot Backend through the gateway</button>
   </h1>
 
   <h1> Message from SpringBoot Api: {{message}}</h1>
